# roomroom

./: AGENTS.md  README.md  main.py  plan.md  pyproject.toml
binoculars/: BINOCULARS_GUIDE.md  detector.py
configs/binoculars/: infer.toml  orch.toml  train.toml
environments/binoculars_env/: __init__.py  pyproject.toml
results/: calibration_data.json
scripts/: calibrate.py  eval.py  train.py  train_kl.py  train_trl.py
