[project]
name = "roomroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=3.0.0",
    "numpy>=2.4.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.12.0",
    "verifiers>=0.1.8.post2",
]
